--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,6 +16,10 @@
 		
 		<!-- BOOTSTRAP CSS -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+		<!-- MAIN CSS -->
+		<link rel="stylesheet" href="{{ url_for('static',filename='CSS/main.css') }}">
+		
 	</head>
 	<body>
 		<div class="container-fluid">
