--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -45,13 +45,13 @@
 			</div>
 			<div class="row chat-input">
 				<div class="col-8">
-					<input type="text" class="col-12">
+					<input type="text" class="col-12" placeholder="Message">
 				</div>
 				<div class="col-2">
-					<input type="text" class="col-12">
+					<input type="text" class="col-12" placeholder="Username">
 				</div>
-				<div class="col-2">
-					<button class="btn btn-primary">Send!</button>
+				<div class="col-2 text-center">
+					<button class="btn btn-primary col-12">Send!</button>
 				</div>
 			</div>
 		</div>
