--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -45,13 +45,13 @@
 			</div>
 			<div class="row chat-input">
 				<div class="col-8">
-					<input type="text" class="col-12" placeholder="Message">
+					<input type="text" class="col-12" placeholder="Message" id='message'>
 				</div>
 				<div class="col-2">
-					<input type="text" class="col-12" placeholder="Username">
+					<input type="text" class="col-12" placeholder="Username" id='username'>
 				</div>
 				<div class="col-2 text-center">
-					<button class="btn btn-primary col-12">Send!</button>
+					<button class="btn btn-primary col-12" onclick="sendMessage()">Send!</button>
 				</div>
 			</div>
 		</div>
