I know how to use git

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -40,8 +40,8 @@
 					</div>
 				</div>
 			</div>
-			<div class="row chat-div">
-				
+			<div class="container-fluid chat-div" id='chat-div'>
+
 			</div>
 			<div class="row chat-input">
 				<div class="col-8">
